--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js"
+    "start": "node ./src/index.ts",
+    "dev": "nodemon ./src/index.ts"
   },
   "license": "MIT",
   "dependencies": {
     "@graphql-tools/load-files": "^6.6.1",
     "@graphql-tools/merge": "^8.3.6",
+    "@types/typescript": "^2.0.0",
     "apollo-server": "^3.10.3",
     "apollo-server-core": "^3.10.3",
     "dotenv": "^16.0.3",
     "graphql-redis-subscriptions": "^2.5.0",
     "graphql-yoga": "1.18.3",
     "ioredis": "^5.2.3",
-    "nanoid": "3.0.0"
+    "nanoid": "3.0.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "typescript": "^4.8.4"
   }
 }
