--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@graphql-tools/load-files": "^6.6.1",
     "@graphql-tools/merge": "^8.3.6",
     "@types/typescript": "^2.0.0",
-    "apollo-server": "^3.10.3",
     "apollo-server-core": "^3.10.3",
     "dotenv": "^16.0.3",
     "graphql-redis-subscriptions": "^2.5.0",
+    "graphql-tools": "^8.3.6",
     "graphql-yoga": "1.18.3",
     "ioredis": "^5.2.3",
     "nanoid": "3.0.0",
